# ovenbrick

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  README.md  THIRD_PARTY_LICENSES.md  main.cxx
clockworkpi/: install.sh
contrib/: CMakeLists.txt
contrib/ddic/: CMakeLists.txt  ddic.hxx  ddic_container.hxx  ddic_creation_policy.hxx  ddic_factory.hxx  ddic_register_proxy.cxx  ddic_register_proxy.hxx
game/: CMakeLists.txt  dummy_game_state.cxx  dummy_game_state.hxx  game_state.hxx  game_state_manager.cxx  game_state_manager.hxx  keyboard_layout.cxx  keyboard_layout.hxx  resources.cxx.in  resources.hxx
test/: CMakeLists.txt  game_state_manager_test.cxx  resources_test.cxx  test_main.cxx
